# erlfuzz

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  run_eqwalizer_once.sh  run_erl_asan.sh  run_erl_once.sh  verify_erl_jit.sh  verify_erlc_opts.sh
scripts/: run_dialyzer_once.sh  run_erlfmt_once.sh  run_gradualizer_once.sh  run_infer_once.sh  verify_erl_jit.sh  verify_infer_against_erl.sh
src/: ast.rs  context.rs  core_types.rs  environment.rs  generator.rs  lib.rs  main.rs  reducer.rs  stdlib.rs  types.rs
