[package]
name = "erlfuzz"
version = "0.1.0"
edition = "2021"
authors = ["Robin Morisset <rmorisset@meta.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.2"
log = "0.4.20"
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
triple_accel = "0.4.0"
